--- a/frontend/css/myStyle.css
+++ b/frontend/css/myStyle.css
@@ -1,29 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-
 html {
-  scroll-padding-top: 35px;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-h2 {
-  display: block;
+  scroll-padding-top: 30px;
+  background-color: #fff;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
-  background: url('../img/background.jpg') no-repeat;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
 }
 
 p {
@@ -38,75 +21,18 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px 100px 10px;
-  display: flex;
+  margin: 10px;
   justify-content: space-between;
-  align-items: center;
   z-index: 99;
+  border: 1px solid lightgray;
 }
 
-.navigation a {
-  position: relative;
-  font-size: 1em;
-  text-decoration: none;
-  font-weight: 500;
-  margin-left: 40px;
-}
-
-.navigation a::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -6px;
-  width: 100%;
-  height: 3px;
-  border-radius: 5px;
-  transform-origin: right;
-  transform: scaleX(0);
-  transition: transform .5s;
-}
-
-.navigation a:hover::after {
-  transform-origin: left;
-  transform: scaleX(1);
-}
-
-.navigation .addApp {
-  width: 50px;
-  height: 50px;
-  background: transparent;
-  border: 3px solid;
-  outline: none;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 2em;
-  transition: .5s;
-}
-
-.navigation .addApp:hover {
-  background: #124c78;
-  border: 2px solid;
-
-}
 
 .list-group {
   margin-top: 30px;
   background: transparent;
   border: 1px solid #000;
   border-radius: 15px;
-  animation: myAnimation 1s cubic-bezier(0.64, 0, 0.78, 0) 0s 1 normal forwards;
-}
-
-.list-group .list-group-item {
-  padding-left: 40px;
-  padding-right: 40px;
-  border-bottom: 1px solid #000;
-  background: transparent;
-}
-
-.list-group .list-group-item.over {
-  color: #413e3e;
-  background: transparent;
 }
 
 .list-group :hover {
@@ -116,30 +42,18 @@ header {
 .wrapper {
   margin-top: 80px;
   padding: 50px;
-  font-size: 1em;
   position: relative;
   width: 80%;
   height: auto;
   background: rgb(250,250,250);
   border: 1px solid #000;
-  border-radius: 20px;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  animation: fadeIn 5s;
+  animation: fadeIn 1s;
 }
 
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
 
-  100% {
-    opacity: 1;
-  }
-}
 
 input[type="datetime-local"],
 h5 {
@@ -182,22 +96,6 @@ h5 {
   color: #6898d3;
 }
 
-.btn {
-  margin-top: 25px;
-  width: 100%;
-  background: #fff;
-  border: 1px solid #000;
-  outline: none;
-  border-radius: 6px;
-  font-size: 0.8em;
-  cursor: pointer;
-}
-.btn:hover {
-  background: rgb(210,210,210);
-}
-
-
-
 .newApp select {
   width: 100%;
   height: 40px;
@@ -206,23 +104,12 @@ h5 {
   border: none;
 }
 
-@keyframes myAnimation {
+@keyframes fadeIn {
   0% {
     opacity: 0;
-    transform: translateX(-250px);
   }
 
   100% {
     opacity: 1;
-    transform: translateX(0);
   }
-}
-
-.newApp {
-  animation: myAnimation 1s cubic-bezier(0.64, 0, 0.78, 0) 0s 1 normal forwards;
-}
-
-.checkbox {
-  text-align: center;
-  /* centers the boxes */
 }
