--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -21,12 +21,13 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  margin: 10px;
   justify-content: space-between;
   z-index: 99;
   border: 1px solid lightgray;
 }
-
+header a {
+  margin-left: 10px;
+}
 
 .list-group {
   margin-top: 30px;
@@ -53,19 +54,15 @@ header {
   animation: fadeIn 1s;
 }
 
-
-
 input[type="datetime-local"],
 h5 {
-  font-size: 0.8em;
-  /* Change this value to adjust the font size */
+  font-size: 1em;
 }
 
 .Details {
   font-size: 1em;
   position: relative;
   line-height: 1.6;
-  animation: myAnimation 1s cubic-bezier(0.64, 0, 0.78, 0) 0s 1 normal forwards;
 }
 
 .Details h3 {
@@ -77,7 +74,6 @@ h5 {
   position: relative;
   width: 100%;
   height: 50px;
-  border-bottom: 2px solid #162938;
   margin: 30px 0;
 }
 
