--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -15,7 +15,6 @@ p {
   margin-top: 20px;
 }
 
-
 header {
   position: fixed;
   top: 0;
@@ -29,11 +28,16 @@ header a {
   margin-left: 10px;
 }
 
+a {
+  font-size: 1rem;
+}
+
 .list-group {
-  margin-top: 30px;
   background: transparent;
   border: 1px solid #000;
   border-radius: 15px;
+  display: block;
+  margin-left: 20px;
 }
 
 .list-group :hover {
