--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -24,6 +24,7 @@ header {
   z-index: 99;
   border: 1px solid lightgray;
 }
+
 header a {
   margin-left: 10px;
 }
@@ -50,7 +51,7 @@ a {
   position: relative;
   width: 80%;
   height: auto;
-  background: rgb(250,250,250);
+  background: rgb(250, 250, 250);
   border: 1px solid #000;
   display: flex;
   justify-content: center;
